[gd_scene load_steps=18 format=3 uid="uid://cndliy0xg0m5b"]

[ext_resource type="Texture2D" uid="uid://d274pyom4owob" path="res://resources/sprites/environment_tileset.png" id="1_gfq80"]
[ext_resource type="Script" path="res://scenes/scripts/Environment.gd" id="2_m4csj"]
[ext_resource type="Texture2D" uid="uid://7ohjh11hlusq" path="res://resources/sprites/objects_tileset.png" id="2_pk40i"]
[ext_resource type="Texture2D" uid="uid://dbhm30ga75in" path="res://resources/sprites/agent.png" id="4_nx588"]
[ext_resource type="Theme" uid="uid://dpvfhrd6522wp" path="res://resources/themes/main_theme.tres" id="5_cutwa"]
[ext_resource type="Texture2D" uid="uid://ck2vbneo8g87j" path="res://resources/sprites/play.png" id="6_1hkb3"]
[ext_resource type="Script" path="res://scenes/scripts/EnvironmentBuilder.gd" id="6_60b1d"]
[ext_resource type="Texture2D" uid="uid://fu4kxuc8g80o" path="res://resources/sprites/stop.png" id="7_tosob"]
[ext_resource type="PackedScene" uid="uid://bsr4483dtngqb" path="res://scenes/TileButton.tscn" id="8_iqjj4"]
[ext_resource type="PackedScene" uid="uid://ejr6e87jlm2y" path="res://scenes/RightColapseMenu.tscn" id="8_tta2c"]
[ext_resource type="PackedScene" uid="uid://cl2qfv56pe53d" path="res://scenes/LeftColapseMenu.tscn" id="9_7qvop"]
[ext_resource type="PackedScene" uid="uid://c8xb0ug4n2f3n" path="res://scenes/ActionButton.tscn" id="10_bwnb3"]
[ext_resource type="PackedScene" uid="uid://csew6g5jg7uo2" path="res://scenes/SelectionButton.tscn" id="10_ybhui"]
[ext_resource type="PackedScene" uid="uid://br7toatf5kgsh" path="res://scenes/EditableSlider.tscn" id="11_8emj8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7pnhd"]
texture = ExtResource("1_gfq80")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0lr5w"]
texture = ExtResource("2_pk40i")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:0/0 = 0
2:0/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSet" id="TileSet_rs4np"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_7pnhd")
sources/1 = SubResource("TileSetAtlasSource_0lr5w")

[node name="Environment" type="TileMap"]
tile_set = SubResource("TileSet_rs4np")
format = 2
layer_0/name = "objects"
layer_0/tile_data = PackedInt32Array(65540, 65537, 3, 196612, 65537, 2)
layer_1/name = "environment"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(0, 0, 1, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 1, 0, 1, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 1, 327681, 0, 1, 393217, 0, 1, 458753, 0, 1, 524289, 0, 1, 2, 0, 1, 65538, 0, 0, 131074, 0, 1, 196610, 0, 0, 262146, 0, 1, 327682, 0, 1, 393218, 0, 1, 458754, 0, 1, 524290, 0, 1, 3, 0, 1, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 1, 327683, 0, 1, 393219, 0, 1, 458755, 0, 1, 524291, 0, 1, 4, 0, 1, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 1, 327684, 0, 1, 393220, 0, 1, 458756, 0, 1, 524292, 0, 1, 5, 0, 1, 65541, 0, 1, 131077, 0, 1, 196613, 0, 1, 262149, 0, 1, 327685, 0, 1, 393221, 0, 1, 458757, 0, 1, 524293, 0, 1, 6, 0, 1, 65542, 0, 1, 131078, 0, 1, 196614, 0, 1, 262150, 0, 1, 327686, 0, 1, 393222, 0, 1, 458758, 0, 1, 524294, 0, 1, 7, 0, 1, 65543, 0, 1, 131079, 0, 1, 196615, 0, 1, 262151, 0, 1, 327687, 0, 1, 393223, 0, 1, 458759, 0, 1, 524295, 0, 1, 8, 0, 1, 65544, 0, 1, 131080, 0, 1, 196616, 0, 1, 262152, 0, 1, 327688, 0, 1, 393224, 0, 1, 458760, 0, 1, 524296, 0, 1, 9, 0, 1, 65545, 0, 1, 131081, 0, 1, 196617, 0, 1, 327689, 0, 1, 393225, 0, 1, 458761, 0, 1, 524297, 0, 1, 10, 0, 1, 65546, 0, 1, 131082, 0, 1, 196618, 0, 1, 262154, 0, 1, 327690, 0, 1, 393226, 0, 1, 458762, 0, 1, 524298, 0, 1, 11, 0, 1, 65547, 0, 1, 131083, 0, 1, 196619, 0, 1, 262155, 0, 1, 327691, 0, 1, 393227, 0, 1, 458763, 0, 1, 524299, 0, 1, 12, 0, 1, 65548, 0, 1, 131084, 0, 1, 196620, 0, 1, 262156, 0, 1, 327692, 0, 1, 393228, 0, 1, 458764, 0, 1, 524300, 0, 1, 13, 0, 1, 65549, 0, 1, 131085, 0, 1, 196621, 0, 1, 262157, 0, 1, 327693, 0, 1, 393229, 0, 1, 458765, 0, 1, 524301, 0, 1, 14, 0, 1, 65550, 0, 1, 131086, 0, 1, 196622, 0, 1, 262158, 0, 1, 327694, 0, 1, 393230, 0, 1, 458766, 0, 1, 524302, 0, 1, 262153, 0, 1)
script = ExtResource("2_m4csj")

[node name="Agent" type="Sprite2D" parent="."]
visible = false
position = Vector2(96, 96)
texture = ExtResource("4_nx588")
offset = Vector2(0, -32)

[node name="EnvironmentBuilder" type="Node2D" parent="."]
script = ExtResource("6_60b1d")

[node name="BuildingArea" type="Control" parent="EnvironmentBuilder"]
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 544.0

[node name="Blocks" parent="EnvironmentBuilder" instance=ExtResource("8_tta2c")]

[node name="Label" type="Label" parent="EnvironmentBuilder/Blocks"]
offset_left = 3.0
offset_top = 99.0
offset_right = 81.0
offset_bottom = 131.0
rotation = -1.5708
theme = ExtResource("5_cutwa")
text = "Blocks"

[node name="EmptyTile" parent="EnvironmentBuilder/Blocks" instance=ExtResource("8_iqjj4")]
position = Vector2(-224, 96)
texture = ExtResource("1_gfq80")
vframes = 2
layer = 1

[node name="WallTile" parent="EnvironmentBuilder/Blocks" instance=ExtResource("8_iqjj4")]
position = Vector2(-96, 96)
texture = ExtResource("1_gfq80")
vframes = 2
frame = 1
layer = 1
atlas_coords = Vector2i(0, 1)

[node name="Objects" parent="EnvironmentBuilder" instance=ExtResource("8_tta2c")]

[node name="Fold" parent="EnvironmentBuilder/Objects" index="2"]
position = Vector2(0, 128)

[node name="Label" type="Label" parent="EnvironmentBuilder/Objects"]
offset_left = 3.0
offset_top = 232.0
offset_right = 85.0
offset_bottom = 264.0
rotation = -1.5708
theme = ExtResource("5_cutwa")
text = "Objects"

[node name="WinTile" parent="EnvironmentBuilder/Objects" instance=ExtResource("8_iqjj4")]
position = Vector2(-224, 96)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 7
source_id = 1
atlas_coords = Vector2i(1, 2)

[node name="LoseTile" parent="EnvironmentBuilder/Objects" instance=ExtResource("8_iqjj4")]
position = Vector2(-96, 96)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 10
source_id = 1
atlas_coords = Vector2i(1, 3)

[node name="Environment" parent="EnvironmentBuilder" instance=ExtResource("8_tta2c")]

[node name="Fold" parent="EnvironmentBuilder/Environment" index="2"]
position = Vector2(0, 256)

[node name="Label" type="Label" parent="EnvironmentBuilder/Environment"]
offset_left = 3.0
offset_top = 360.0
offset_right = 85.0
offset_bottom = 392.0
rotation = -1.5708
theme = ExtResource("5_cutwa")
text = "Env"
horizontal_alignment = 1

[node name="ShiftChance" parent="EnvironmentBuilder/Environment" instance=ExtResource("11_8emj8")]
offset_left = -288.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 96.0
max_value = 0.5
value = 0.1
property = "Shift chance"

[node name="MaxSteps" parent="EnvironmentBuilder/Environment" instance=ExtResource("11_8emj8")]
offset_left = -288.0
offset_top = 128.0
offset_right = -32.0
offset_bottom = 192.0
min_value = 5.0
max_value = 100.0
step = 5.0
value = 50.0
property = "Max steps"

[node name="AllowedActions" type="Label" parent="EnvironmentBuilder/Environment"]
offset_left = -320.0
offset_top = 216.0
offset_bottom = 248.0
theme = ExtResource("5_cutwa")
text = "Allowed actions"
horizontal_alignment = 1

[node name="LeftUp" parent="EnvironmentBuilder/Environment" instance=ExtResource("10_bwnb3")]
position = Vector2(-224, 288)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 4
action = Vector2i(-1, -1)

[node name="Up" parent="EnvironmentBuilder/Environment" instance=ExtResource("10_bwnb3")]
position = Vector2(-160, 288)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
action = Vector2i(0, -1)

[node name="RightUp" parent="EnvironmentBuilder/Environment" instance=ExtResource("10_bwnb3")]
position = Vector2(-96, 288)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 5
action = Vector2i(1, -1)

[node name="Left" parent="EnvironmentBuilder/Environment" instance=ExtResource("10_bwnb3")]
position = Vector2(-224, 352)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 6
action = Vector2i(-1, 0)

[node name="Right" parent="EnvironmentBuilder/Environment" instance=ExtResource("10_bwnb3")]
position = Vector2(-96, 352)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 3
action = Vector2i(1, 0)

[node name="LeftDown" parent="EnvironmentBuilder/Environment" instance=ExtResource("10_bwnb3")]
position = Vector2(-224, 416)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 1
action = Vector2i(-1, 1)

[node name="Down" parent="EnvironmentBuilder/Environment" instance=ExtResource("10_bwnb3")]
position = Vector2(-160, 416)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 9
action = Vector2i(0, 1)

[node name="RightDown" parent="EnvironmentBuilder/Environment" instance=ExtResource("10_bwnb3")]
position = Vector2(-96, 416)
texture = ExtResource("2_pk40i")
hframes = 3
vframes = 4
frame = 2
action = Vector2i(1, 1)

[node name="Algorithms" parent="EnvironmentBuilder" instance=ExtResource("9_7qvop")]

[node name="Label" type="Label" parent="EnvironmentBuilder/Algorithms"]
offset_left = -4.0
offset_top = 3.0
offset_right = 120.0
offset_bottom = 35.0
rotation = 1.5708
theme = ExtResource("5_cutwa")
text = "Learners"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="EnvironmentBuilder/Algorithms"]
offset_top = 64.0
offset_right = 320.0
offset_bottom = 576.0

[node name="ADP" parent="EnvironmentBuilder/Algorithms/VBoxContainer" instance=ExtResource("10_ybhui")]
layout_mode = 2
text = "ADP"
selection = "ADP"

[node name="MCES" parent="EnvironmentBuilder/Algorithms/VBoxContainer" instance=ExtResource("10_ybhui")]
layout_mode = 2
text = "Monte Carlo ES"
selection = "MCES"

[node name="Sarsa" parent="EnvironmentBuilder/Algorithms/VBoxContainer" instance=ExtResource("10_ybhui")]
layout_mode = 2
text = "SARSA"
selection = "Sarsa"

[node name="QLearning" parent="EnvironmentBuilder/Algorithms/VBoxContainer" instance=ExtResource("10_ybhui")]
layout_mode = 2
text = "Q Learning"
selection = "QLearning"

[node name="Rewards" parent="EnvironmentBuilder" instance=ExtResource("9_7qvop")]

[node name="Fold" parent="EnvironmentBuilder/Rewards" index="2"]
position = Vector2(0, 128)

[node name="Label" type="Label" parent="EnvironmentBuilder/Rewards"]
offset_left = -4.0
offset_top = 131.0
offset_right = 120.0
offset_bottom = 163.0
rotation = 1.5708
theme = ExtResource("5_cutwa")
text = "Rewards"
horizontal_alignment = 1

[node name="BaseReward" parent="EnvironmentBuilder/Rewards" instance=ExtResource("11_8emj8")]
offset_left = 32.0
offset_top = 96.0
offset_right = 288.0
offset_bottom = 160.0
min_value = -2.0
max_value = 0.5
value = -0.2
property = "Base reward"

[node name="WinReward" parent="EnvironmentBuilder/Rewards" instance=ExtResource("11_8emj8")]
offset_left = 32.0
offset_top = 224.0
offset_right = 288.0
offset_bottom = 288.0
min_value = -1.0
value = 1.0
property = "Win reward"

[node name="LoseReward" parent="EnvironmentBuilder/Rewards" instance=ExtResource("11_8emj8")]
offset_left = 32.0
offset_top = 352.0
offset_right = 288.0
offset_bottom = 416.0
min_value = -1.0
value = -1.0
property = "Lose reward"

[node name="Values" parent="EnvironmentBuilder" instance=ExtResource("9_7qvop")]

[node name="Fold" parent="EnvironmentBuilder/Values" index="2"]
position = Vector2(0, 256)

[node name="Label" type="Label" parent="EnvironmentBuilder/Values"]
offset_left = -4.0
offset_top = 259.0
offset_right = 120.0
offset_bottom = 291.0
rotation = 1.5708
theme = ExtResource("5_cutwa")
text = "Values
"
horizontal_alignment = 1

[node name="Gamma" parent="EnvironmentBuilder/Values" instance=ExtResource("11_8emj8")]
offset_left = 32.0
offset_top = 64.0
offset_right = 288.0
offset_bottom = 128.0
value = 0.9
property = "Gamma"

[node name="StartingEpsilon" parent="EnvironmentBuilder/Values" instance=ExtResource("11_8emj8")]
offset_left = 32.0
offset_top = 168.0
offset_right = 288.0
offset_bottom = 232.0
value = 0.9
property = "Starting epsilon"

[node name="StartingAlpha" parent="EnvironmentBuilder/Values" instance=ExtResource("11_8emj8")]
offset_left = 32.0
offset_top = 272.0
offset_right = 288.0
offset_bottom = 336.0
max_value = 0.5
step = 0.01
value = 0.1
property = "Starting alpha"

[node name="EpisodesToZero" parent="EnvironmentBuilder/Values" instance=ExtResource("11_8emj8")]
offset_left = 32.0
offset_top = 376.0
offset_right = 288.0
offset_bottom = 440.0
min_value = 5.0
max_value = 500.0
step = 5.0
value = 200.0
property = "Eps to converge"

[node name="Play" type="TextureButton" parent="."]
offset_left = 864.0
offset_top = 464.0
offset_right = 928.0
offset_bottom = 529.0
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("6_1hkb3")
texture_pressed = ExtResource("7_tosob")

[node name="SimulationSpeed" type="Label" parent="."]
offset_left = 687.0
offset_top = 12.0
offset_right = 896.0
offset_bottom = 44.0
theme = ExtResource("5_cutwa")
text = "SIMULATION SPEED"

[node name="Slider" type="HSlider" parent="."]
offset_left = 607.0
offset_top = 24.0
offset_right = 895.0
offset_bottom = 88.0
theme = ExtResource("5_cutwa")
max_value = 1.0
step = 0.01
value = 0.83
scrollable = false

[connection signal="mouse_entered" from="EnvironmentBuilder/BuildingArea" to="EnvironmentBuilder" method="focus_building"]
[connection signal="mouse_exited" from="EnvironmentBuilder/BuildingArea" to="EnvironmentBuilder" method="unfocus_building"]
[connection signal="pressed" from="Play" to="." method="toggle_start"]

[editable path="EnvironmentBuilder/Objects"]
[editable path="EnvironmentBuilder/Environment"]
[editable path="EnvironmentBuilder/Rewards"]
[editable path="EnvironmentBuilder/Values"]
